<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.hxy.platform.android.my.register.RegisterActivity">

    <RelativeLayout
        android:id="@+id/layout_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView"
            style="@style/textStyle.Medium.User"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/register_phone_number" />

        <EditText
            android:id="@+id/editPhoneNum"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:ems="10"
            android:inputType="phone" />

        <org.hxy.platform.android.common.widget.VerificationSeekBar
            android:id="@+id/sb_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPhoneNum"
            android:max="100"
            android:maxHeight="45dp"
            android:minHeight="45dp"
            android:progress="0"
            android:layout_marginTop="20dp"
            android:progressDrawable="@drawable/bg_forgotpassword_seekbar"
            android:thumb="@drawable/bg_seekbar_thumb"
            android:thumbOffset="-1dp" />

        <Button
            android:id="@+id/btn_next_1"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_below="@+id/sb_progress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:onClick="onBtnNextOneClick"
            android:text="@string/register_btn_next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_register_phone"
            style="@style/textStyle.Medium.User"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/register_sub_title" />

        <TextView
            android:id="@+id/txt_code"
            style="@style/textStyle.Medium.User"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_register_phone"
            android:gravity="center"
            android:text="@string/register_check_code" />

        <EditText
            android:id="@+id/edit_code"
            style="@style/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_code"
            android:layout_toEndOf="@+id/txt_code"
            android:layout_toRightOf="@+id/txt_code"
            android:ems="6"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_code"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:onClick="onBtnReCodeClick"
            android:text="@string/register_btn_re_code" />

        <Button
            android:id="@+id/btn_next_2"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_code"
            android:layout_marginTop="20dp"
            android:onClick="onBtnNextTowClick"
            android:text="@string/register_btn_next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_third"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_pwd"
            style="@style/textStyle.Medium.User"
            android:layout_width="100dp"
            android:gravity="left|center"
            android:text="@string/register_password" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_pwd"
            android:layout_toRightOf="@+id/txt_pwd"
            android:digits="@string/register_edit_digits"
            android:inputType="textPassword"
            android:maxLength="20" />

        <TextView
            android:id="@+id/txt_confirm_pwd"
            style="@style/textStyle.Medium.User"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_pwd"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/register_confirm_password" />

        <EditText
            android:id="@+id/edit_re_password"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_confirm_pwd"
            android:layout_alignLeft="@+id/edit_password"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_pwd"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:digits="@string/register_edit_digits"
            android:inputType="textPassword"
            android:maxLength="20" />

        <TextView
            android:id="@+id/txt_error_info"
            style="@style/textStyle.Medium.User"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_confirm_pwd"
            android:gravity="left|center"
            android:text="@string/register_error_info"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_register"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_error_info"
            android:layout_marginTop="10dp"
            android:onClick="onBtnNextThreeClick"
            android:text="@string/register_btn_register" />

    </RelativeLayout>
</RelativeLayout>
